--- a/_samples/rdfa/formats/twitter.css
+++ b/_samples/rdfa/formats/twitter.css
@@ -34,7 +34,7 @@
 .twitter-person
 {
   border           : 2px solid white;
-  background-color : lightgreen;
+  background-color : green;
 }
 
 .foaf-depiction
